// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayNavigationBar collapses the previously expanded dropdown when trigger element is clicked 1`] = `
<div
  class="navbar-collapse collapse"
  data-testid="NavigationBarDropdown"
  style=""
>
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <ul
      class="navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active link-secondary"
          href="#1"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 1
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <button
          class="nav-link btn btn-block btn-sm btn-unstyled"
          type="button"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 2
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ClayNavigationBar renders 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <a
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed link-secondary"
        data-testid="navbarToggler"
      >
        Item 1
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </a>
      <div
        class="navbar-collapse collapse"
        data-testid="NavigationBarDropdown"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-secondary"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              class="nav-item"
            >
              <button
                class="nav-link btn btn-block btn-sm btn-unstyled"
                type="button"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 2
                </span>
              </button>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-secondary"
                href="#3"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ClayNavigationBar renders a dropdown when clicking the trigger element from NavigationBar 1`] = `
<div
  class="navbar-collapse collapse show"
  data-testid="NavigationBarDropdown"
  style=""
>
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <ul
      class="navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active link-secondary"
          href="#1"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 1
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <button
          class="nav-link btn btn-block btn-sm btn-unstyled"
          type="button"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 2
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ClayNavigationBar renders when passing more than one active item 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <a
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed link-secondary"
        data-testid="navbarToggler"
      >
        Item 1
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </a>
      <div
        class="navbar-collapse collapse"
        data-testid="NavigationBarDropdown"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-secondary"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              class="nav-item"
            >
              <button
                class="nav-link active btn btn-block btn-sm btn-unstyled"
                type="button"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 2
                </span>
              </button>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-secondary"
                href="#3"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ClayNavigationBar should throw a warning when passing more than one active prop to child 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <a
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed link-secondary"
        data-testid="navbarToggler"
      >
        Item 1
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </a>
      <div
        class="navbar-collapse collapse"
        data-testid="NavigationBarDropdown"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-secondary"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              class="nav-item"
            >
              <button
                class="nav-link active btn btn-block btn-sm btn-unstyled"
                type="button"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 2
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
